--- a/app/src/main/res/layout/activity_lead.xml
+++ b/app/src/main/res/layout/activity_lead.xml
@@ -177,7 +177,7 @@
                 android:padding="10dp">
 
                 <TextView
-                    android:id="@+id/txt1_name"
+                    android:id="@+id/txt1_lname"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/layout_margin"
